--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>FE WORKSHOP</title>
+    <style>
+        about-me {
+            display: flex;
+            align-items: center;
+            width: 50%;
+            margin: 0 auto;
+        }
+
+        about-me img {
+            border-radius: 50%;
+            border: 3px solid #15202b;
+            margin-right: 5px;
+            width: 180px;
+        }
+    </style>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/tables-min.css">
 </head>
 <body>
-
+<main id="app"></main>
 </body>
 </html>
